投稿一覧ページの作成

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,7 +7,7 @@
 }
 
 .posts-item {
-  height: 600px;
+  height: auto;
   width: 600px;
   margin: 50px 0 50px 100px;
   border: 1px solid #80808040;
@@ -27,6 +27,6 @@
   width: 100%;
 }
 
-.poster-comments {
+.poster-contents {
   padding: 0 20px 20px 20px;
 }
