--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,54 +9,18 @@
   </ul>
 </header>
 
-<!--1つ目の投稿=====================================================================================-->
-<% posts_user_name_1 = link_to("稲葉",  "", class:"posts-user-name") %>
-<% posts_img_1 = image_tag "/4384784_s.jpg", class:"posts-img" %>
-<% posts_cooking_name_1 = "チキンのトマトソース煮込み" %>
-<% posts_ingredients_name_1 = "鶏肉/トマト缶/ニンニクチューブ/玉ねぎ" %>
-<% posts_comment_1 = "上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。" %>
-
 <div class="posts-index-main">
   <div class="container">
     <div class="posts-items">
-      <div class="posts-item">
-        <%= posts_user_name_1 %>
-        <%= posts_img_1 %>
-        <div class="poster-comments">
-          <p class="cooking-name">
-            <%= posts_cooking_name_1 %>
-          </p>
-          <p class="ingredients-name">
-            <%= posts_ingredients_name_1 %>
-          </p>
-          <p class="poster-comment">
-            <%= posts_comment_1 %>
-          </p>
+      <% @posts.each do |post| %>
+        <div class="posts-item">
+          <div class="poster-contents">
+            <p class="cooking-name">
+              <%= post %>
+            </p>
+          </div>
         </div>
-      </div>
-      
-<!--2つ目の投稿=====================================================================================-->
-<% posts_user_name_2 = link_to("山田",  "", class:"posts-user-name") %>
-<% posts_img_2 = image_tag "/4384784_s.jpg", class:"posts-img" %>
-<% posts_cooking_name_2 = "肉じゃが" %>
-<% posts_ingredients_name_2 = "豚肉/じゃがいも/人参/玉ねぎ" %>
-<% posts_comment_2 = "上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。上手く作れました。" %>
-      
-      <div class="posts-item">
-        <%= posts_user_name_2 %>
-        <%= posts_img_2 %>
-        <div class="poster-comments">
-          <p class="cooking-name">
-            <%= posts_cooking_name_2 %>
-          </p>
-          <p class="ingredients-name">
-            <%= posts_ingredients_name_2 %>
-          </p>
-          <p class="poster-comment">
-            <%= posts_comment_2 %>
-          </p>
-        </div>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
