--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,44 @@
   </head>
 
   <body>
+    <header>
+      <div class="header-logo">
+        <%= link_to "pf_app", root_path, class:"header-menu" %>
+      </div>
+      <ul class="header-list">
+        <% if session[:user_id] %>
+          <li>
+            <%= link_to "ログアウト", logout_path, method: :post, class:"header-menu logout-button" %>
+          </li>
+          <li>
+            <%= link_to @current_user.user_name, users_path(@user), class:"header-menu" %>
+          </li>
+          <li>
+            <%= link_to "全てのユーザー", users_path, class:"header-menu" %>
+          </li>
+          <li>
+            <%= link_to "投稿する", posts_new_path, class:"header-menu" %>
+          </li>
+          <li>
+            <%= link_to "投稿一覧", posts_index_path, class:"header-menu" %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to " ログイン", login_path, class:"header-menu login-button" %>
+          </li>
+          <li>
+            <%= link_to "新規登録", new_user_path, class:"header-menu" %>
+          </li>
+        <% end %>
+      </ul>
+    </header>
+    
+    <% if flash[:notice] %>
+      <div class="flash">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
