--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,23 +1,30 @@
-<header>
-  <div class="header-logo">
-    pf_app
-  </div>
-  <ul class="header-list">
-    <li>
-      ログイン
-    </li>
-  </ul>
-</header>
-
 <div class="posts-index-main">
   <div class="container">
     <div class="posts-items">
-      <% @posts.each do |post| %>
+      <% @recipes.each do |recipe| %>
         <div class="posts-item">
           <div class="poster-contents">
-            <p class="cooking-name">
-              <%= post %>
-            </p>
+            <div class="posts-top">
+              <div class="posts-user-image">
+                <img src="<%= "/user_images/#{recipe.user.image}" %>">
+              </div>
+              <div class="posts-user-name">
+                <%= link_to recipe.user.user_name, user_path(recipe.user.id) %>
+              </div>
+            </div>
+            <div class="posts-center">
+              <div class="cooking-image">
+                <%= image_tag "/cooking_images/#{recipe.cooking_image}" %>
+              </div>
+            </div>
+            <div class="posts-bottom">
+              <p class="cooking-name">
+                <%= link_to recipe.cooking_name, post_path(recipe.id), class:"cooking_name" %>
+              </p>
+              <p class="comment">
+                <%= link_to recipe.comment, post_path(recipe.id), class:"cooking_name" %>
+              </p>
+            </div>
           </div>
         </div>
       <% end %>
