--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,12 +1,77 @@
+// index===================================================================
 .posts-index-main {
   height: auto;
 }
 
 .container {
+  width: 70%;
   margin: 0;
 }
 
 .posts-item {
+  height: auto;
+  width: 600px;
+  margin: auto;
+  margin-top: 50px;
+  border: 1px solid #80808040;
+  color: black;
+  box-shadow: 3px 3px 10px 0px #c1ced7;
+}
+
+.posts-top {
+  display: flex;
+}
+
+.posts-user-image {
+  height: 30px;
+  width: 30px;
+  margin-right: 0;
+}
+
+.posts-user-image img {
+  height: 43px;
+  width: 43px;
+  border-radius: 50%;
+}
+
+.posts-user-name {
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.posts-user-name a {
+  color: black;
+  text-decoration: none;
+}
+
+.cooking-image {
+  margin-top: 20px;
+}
+
+.cooking-image img {
+  height: 300px;
+  width: 100%;
+}
+
+.posts-bottom {
+  padding-left: 20px;
+}
+
+.cooking_name {
+  color: black;
+  text-decoration: none;
+}
+
+.poster-contents {
+  padding: 20px 20px;
+}
+
+// show===================================================================
+.posts-show-main {
+  height: auto;
+}
+
+.posts-show-item {
   height: auto;
   width: 600px;
   margin: 50px 0 50px 100px;
@@ -15,18 +80,113 @@
   box-shadow: 3px 3px 10px 0px #c1ced7;
 }
 
-.posts-user-name {
-  float: left;
- margin: 20px 0 20px 20px;
- text-decoration: none;
- color: black;
+.flex {
+  display: flex;
 }
 
-.posts-img {
-  height: 300px;
-  width: 100%;
+.show-cooking-name {
+  font-size: 25px;
 }
 
-.poster-contents {
-  padding: 0 20px 20px 20px;
+.post-user-name img {
+  height: 43px;
+  width: 43px;
+  border-radius: 50%;
+}
+
+.post_user_name {
+  color: black;
+  text-decoration: none;
+}
+
+.show-cooking-recipe {
+  margin-right: 15px;
+}
+
+.show-ingredients {
+  width: 240px;
+  margin: 0 0 0 auto;
+}
+
+.ingredients p {
+  border-bottom: 1px solid #80808063;
+}
+
+.ingredient-letter {
+  font-weight: bold;
+}
+
+.comment-letter {
+  margin-top: 32px;
+}
+
+// new===================================================================
+.new-post {
+  height: auto;
+  width: 400px;
+  margin: auto;
+  margin-top: 40px;
+  border: 1px solid #80808040;
+  box-shadow: 3px 3px 10px 0px #c1ced7;
+  text-align: center
+}
+
+.new-steps textarea {
+  width: 253px;
+}
+
+.posts-new-content p {
+  width: 253px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.posts-new-content textarea {
+  width: 253px;
+}
+
+.send-post {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+// edit===================================================================
+.post-menu {
+  text-align: right;
+}
+
+.edit-post {
+  height: auto;
+  width: 400px;
+  margin: auto;
+  margin-top: 40px;
+  border: 1px solid #80808040;
+  box-shadow: 3px 3px 10px 0px #c1ced7;
+  text-align: center
+}
+
+.posts-edit-content p {
+  width: 253px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.posts-edit-content textarea {
+  width: 253px;
+}
+
+.post_edit_button {
+  text-decoration: none;
+  color: blue;
+  margin-right: 10px;
+}
+
+.post_destroy_button {
+  text-decoration: none;
+  color: blue;
+  margin-right: 10px;
 }
