--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,10 +1,1 @@
-<header>
-  <div class="header-logo">
-    pf_app
-  </div>
-  <ul class="header-list">
-    <li>
-      ログイン
-    </li>
-  </ul>
-</header>
+<h1>トップページ</h1>
