フォロー、フォロー解除ボタンの追加

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,13 +14,14 @@ header {
 .header-logo {
   float: left;
   line-height: 85px;
-  margin-left: 60px;
+  margin-left: 234px;
   font-size: 30px;
 }
 
 .header-list {
   line-height: 85px;
   margin: 0;
+  margin-right: 242px;
   color: white;
   list-style: none;
 }
