--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,10 +6,8 @@
     <div class="users-index-items">
       <% @users.each do |user| %>
         <div class="users-index-item">
-          <div class="user-index-image">
-            <%= image_tag "/user_images/#{user.image}", class:"user_index_image" %>
-          </div>
-          <p><%= link_to user.user_name, user_path(user.id), class:"users_index_name" %></p>
+          <%= image_tag "/user_images/#{user.image}", class:"user_index_image" %>
+          <%= link_to user.user_name, user_path(user.id), class:"users_index_name" %>
         </div>
       <% end %>
     </div>
