フォロー中のユーザー一覧ページ作成

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -127,6 +127,10 @@
   margin-top: 20px;
 }
 
+.btn {
+  margin-top: 20px;
+}
+
 // edit====================================================================================
 .edit-user {
   height: auto;
