--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@current_user.active_relationships.build) do |f| %>
+<%= form_for(set_current_user.active_relationships.build) do |f| %>
   <div><%= hidden_field_tag :followed_id, @user.id %></div>
-  <%= f.submit "フォロー", class: "btn btn-primary" %>
+  <%= f.submit "フォロー", class:"btn btn_primary" %>
 <% end %>
