--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,7 +1,9 @@
-<div id="follow_form">
-<% if @current_user.following?(@user) %>
-  <%= render 'unfollow' %>
-<% else %>
-  <%= render 'follow' %>
+<% unless set_current_user?(@user) %>
+  <div id="follow_form">
+  <% if set_current_user.following?(@user) %>
+    <%= render 'unfollow' %>
+  <% else %>
+    <%= render 'follow' %>
+  <% end %>
+  </div>
 <% end %>
-</div>
