--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(set_current_user.active_relationships.find_by(followed_id: @user.id),
-      html: { method: :delete }) do |f| %>
+      html: { method: :delete },
+      remote: true) do |f| %>
   <%= f.submit "フォロー解除", class:"btn" %>
 <% end %>
