検索機能を追加する

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -90,16 +90,8 @@
   color: black;
 }
 
-.user_info_likes {
-  display: inline-block;
-  height: 45px;
-  width: 270px;
-  font-size: 18px;
-  border-top: 1px solid black;
+.like {
   border-bottom: 1px solid black;
-  line-height: 45px;
-  text-decoration: none;
-  color: black;
 }
 
 .user-info p {
