--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,10 @@
 <div class="posts-index-main">
   <div class="container">
-    <div class="posts-items">
-      <%= render 'recipes/feed' %>
+    <div class="post-page">
+      <div class="posts-items">
+        <%= render 'recipes/feed' %>
+      </div>
+      <%= render 'users/search' %>
     </div>
   </div>
 </div>
