--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -70,6 +70,11 @@
   padding: 20px 20px;
 }
 
+.search-form {
+  margin-top: 50px;
+  margin-left: 120px;
+}
+
 // show===================================================================
 .posts-show-main {
   height: auto;
