--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,9 @@
       <div class="posts-items">
         <%= render 'recipes/feed' %>
       </div>
-      <%= render 'users/search' %>
+      <div class="search-form">
+        <%= render 'posts/search_form' %>
+      </div>
     </div>
   </div>
 </div>
