--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,1 +1,18 @@
-<h1>トップページ</h1>
+<div class="top-main">
+  <div class="top-image">
+    <div>
+      <img class="top-image-1" src="<%= "top_images/curry.jpg" %>">
+    </div>
+    <div>
+      <img class="top-image-2" src="<%= "top_images/vegetable.jpg" %>">
+    </div>
+  </div>
+  <div class="login-contents">
+    <div class="login-contents-text">1人の時間に小さな喜びを</div>
+    <div class="login-buttons">
+      <%= link_to "新規登録", new_user_path, class:"signup-btn" %>
+      <%= link_to "ログイン", login_path, class:"login-btn" %>
+      <%= link_to "ゲストログイン", guest_sessions_path, method: :post %>
+    </div>
+  </div>
+</div>
