--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -1,19 +1,15 @@
 <h1>検索</h1>
-<%= search_form_for @q, url: search_users_path do |f| %>
-  <%= f.label :user_name_cont, "ユーザー名" %>
-  <br>
-  <%= f.search_field :user_name_cont, required: true %>
-  <%= f.submit "検索" %>
-<% end %>
-<%= search_form_for @q_recipes, url: search_posts_path do |f| %>
-  <%= f.label :cooking_name_cont, "料理名" %>
-  <br>
-  <%= f.search_field :cooking_name_cont, required: true %>
-  <%= f.submit "検索" %>
-<% end %>
-<%= search_form_for @q_ingredients, url: search_ingredients_path do |f| %>
-  <%= f.label :ingredient_1_or_ingredient_2_or_ingredient_3_cont, "材料名" %>
-  <br>
-  <%= f.search_field :ingredient_1_or_ingredient_2_or_ingredient_3_cont, required: true %>
-  <%= f.submit "検索" %>
-<% end %>
+<div id="search-form">
+  <%= search_form_for @q, url: search_users_path do |f| %>
+    <%= f.label :user_name_cont, "ユーザー名" %>
+    <br>
+    <%= f.search_field :user_name_cont, required: true %>
+    <%= f.submit "検索" %>
+  <% end %>
+  <%= search_form_for @q_recipes, url: search_posts_path do |f| %>
+    <%= f.label :cooking_name_cont, "料理名" %>
+    <br>
+    <%= f.search_field :cooking_name_cont, required: true %>
+    <%= f.submit "検索" %>
+  <% end %>
+</div>
