--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,11 @@
 <div class="posts-index-main">
-  <div class="container">
-    <div class="post-page">
-      <div class="posts-items">
-        <%= render 'recipes/feed' %>
-      </div>
-      <div class="search-form">
-        <%= render 'posts/search_form' %>
-      </div>
+  <h1 class="main-headline">レシピ</h1>
+  <div class="post-page">
+    <div class="posts-items">
+      <%= render 'recipes/feed' %>
+    </div>
+    <div class="index-search-form">
+      <%= render 'posts/search_form' %>
     </div>
   </div>
 </div>
